--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="lightyellow">#FFFFDA3A</color>
     <color name="blackgrey">#FF4B4747</color>
     <color name="grey">#FF9D9C9C</color>
+    <color name="grey70">#FF707070</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFF5F5F5</color>
 </resources>
