Finished SearchScreen, searchField and listrecyclerview

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="grey70">#FF707070</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFF5F5F5</color>
+    <color name="white100">#FFFFFFFF</color>
 </resources>
